[gd_scene load_steps=36 format=3 uid="uid://dbeflneripred"]

[ext_resource type="Script" path="res://Script/grass.gd" id="1_0hi7w"]
[ext_resource type="Texture2D" uid="uid://c1b43jlrtpfhm" path="res://Items/Grass&Road1.png" id="1_8i5ts"]
[ext_resource type="Texture2D" uid="uid://bc2a7ptms7c1i" path="res://Items/GrassBig.png" id="2_rq8ru"]
[ext_resource type="Texture2D" uid="uid://pse3b5yqlhjb" path="res://Items/shop1.png" id="3_ulrws"]
[ext_resource type="Texture2D" uid="uid://mojfgrcla4xq" path="res://Items/Home.png" id="4_hc648"]
[ext_resource type="Texture2D" uid="uid://x8oy4fsdp5b" path="res://Items/flower1t.png" id="5_glc1m"]
[ext_resource type="PackedScene" uid="uid://exluca04i7q7" path="res://Scene/player.tscn" id="5_q6snc"]
[ext_resource type="Texture2D" uid="uid://dhvjdkak37xra" path="res://Items/GrassBig-export.png" id="6_0lar3"]
[ext_resource type="Texture2D" uid="uid://cidt0qvllkv8t" path="res://Shadows/shadow.png" id="6_2ukpi"]
[ext_resource type="PackedScene" uid="uid://c42cepk3t631m" path="res://Scene/enemy_spawner_grass.tscn" id="10_848d4"]
[ext_resource type="Texture2D" uid="uid://db18gmf5lwqf1" path="res://Items/Tree&Stone.png" id="11_mtk6i"]
[ext_resource type="AudioStream" uid="uid://r83j3bq38c1p" path="res://bgm/Wholesome.mp3" id="12_kauch"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_fsi1s"]
texture = ExtResource("1_8i5ts")
19:8/size_in_atlas = Vector2i(2, 2)
19:8/0 = 0
21:8/size_in_atlas = Vector2i(2, 2)
21:8/0 = 0
23:8/size_in_atlas = Vector2i(2, 2)
23:8/0 = 0
23:10/size_in_atlas = Vector2i(2, 2)
23:10/0 = 0
21:12/size_in_atlas = Vector2i(2, 2)
21:12/0 = 0
19:10/size_in_atlas = Vector2i(2, 2)
19:10/0 = 0
19:12/size_in_atlas = Vector2i(2, 2)
19:12/0 = 0
23:12/size_in_atlas = Vector2i(2, 2)
23:12/0 = 0
21:10/size_in_atlas = Vector2i(2, 2)
21:10/0 = 0
26:9/size_in_atlas = Vector2i(2, 2)
26:9/0 = 0
28:9/size_in_atlas = Vector2i(2, 2)
28:9/0 = 0
26:11/size_in_atlas = Vector2i(2, 2)
26:11/0 = 0
28:11/size_in_atlas = Vector2i(2, 2)
28:11/0 = 0
12:16/size_in_atlas = Vector2i(2, 2)
12:16/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_8nhmn"]
texture = ExtResource("2_rq8ru")
1:1/size_in_atlas = Vector2i(5, 5)
1:1/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_h7bsx"]
texture = ExtResource("3_ulrws")
1:3/size_in_atlas = Vector2i(14, 16)
1:3/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_equ5i"]
texture = ExtResource("5_glc1m")
0:0/size_in_atlas = Vector2i(2, 2)
0:0/0 = 0
2:0/size_in_atlas = Vector2i(2, 2)
2:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_opcf4"]
texture = ExtResource("6_0lar3")
1:1/size_in_atlas = Vector2i(6, 6)
1:1/0 = 0

[sub_resource type="TileSet" id="TileSet_n0gp4"]
sources/0 = SubResource("TileSetAtlasSource_fsi1s")
sources/1 = SubResource("TileSetAtlasSource_8nhmn")
sources/2 = SubResource("TileSetAtlasSource_h7bsx")
sources/3 = SubResource("TileSetAtlasSource_equ5i")
sources/4 = SubResource("TileSetAtlasSource_opcf4")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_fe6mx"]
texture = ExtResource("4_hc648")
6:5/size_in_atlas = Vector2i(23, 18)
6:5/0 = 0

[sub_resource type="TileSet" id="TileSet_gpl68"]
sources/0 = SubResource("TileSetAtlasSource_fe6mx")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nh2w5"]
size = Vector2(27.5, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n3faq"]
size = Vector2(35, 13.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fvfyo"]
size = Vector2(22.5, 36.5)

[sub_resource type="LabelSettings" id="LabelSettings_56oo3"]
font_size = 36

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ujh5n"]
size = Vector2(36.5, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u28t8"]
size = Vector2(20, 57)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7i7nb"]
size = Vector2(16, 38)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t7gk6"]
size = Vector2(18, 36)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u86sa"]
size = Vector2(42, 18)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_1w07m"]
texture = ExtResource("11_mtk6i")
1:1/size_in_atlas = Vector2i(2, 4)
1:1/0 = 0
1:1/0/y_sort_origin = -15
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-15.5, -13.25, 15.75, -13, 16.5, 11.75, 5.5, 15, 4.5, 20, 11.75, 20.25, 12, 26.5, 7, 29.25, -4.5, 29.75, -11.25, 26.75, -9.5, 20, -3, 20, -3.5, 14.75, -14.25, 10.5)
0:8/size_in_atlas = Vector2i(4, 3)
0:8/0 = 0
0:8/0/y_sort_origin = -20
0:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:8/0/physics_layer_0/angular_velocity = 0.0
0:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9.5, -24, 12, -23.5, 16.25, -15.25, 18, 1.75, 15.5, 9.25, -15.5, 9, -19.25, 1.75, -16, -14)

[sub_resource type="TileSet" id="TileSet_whxcf"]
physics_layer_0/collision_layer = 1
sources/1 = SubResource("TileSetAtlasSource_1w07m")

[sub_resource type="LabelSettings" id="LabelSettings_td6ap"]
font_size = 25

[sub_resource type="LabelSettings" id="LabelSettings_ivxkn"]
font_size = 21

[sub_resource type="LabelSettings" id="LabelSettings_uvyet"]
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_u5m86"]
font_size = 19

[node name="GrassScene" type="Node2D"]
y_sort_enabled = true
position = Vector2(74, -1)
script = ExtResource("1_0hi7w")

[node name="TileMap(No Y sort)" type="TileMap" parent="."]
tile_set = SubResource("TileSet_n0gp4")
format = 2
layer_0/name = "ground"
layer_0/tile_data = PackedInt32Array(1245183, 1376256, 10, 1179649, 1376256, 10, 1179651, 1376256, 10, 1179653, 1376256, 10, 1179655, 1376256, 10, 1179657, 1376256, 10, 1179659, 1376256, 10, 1179661, 1376256, 10, 1179663, 1376256, 10, 1179665, 1376256, 10, 1179667, 1376256, 10, 1179669, 1376256, 10, 1179671, 1376256, 10, 1376255, 1376256, 10, 1310721, 1376256, 10, 1310723, 1376256, 10, 1310725, 1376256, 10, 1310727, 1376256, 10, 1310729, 1376256, 10, 1310731, 1376256, 10, 1310733, 1376256, 10, 1310735, 1376256, 10, 1310737, 1376256, 10, 1310739, 1376256, 10, 1310741, 1376256, 10, 1310743, 1376256, 10, 1441804, 1376256, 10, 1572876, 1376256, 10, 1703948, 1376256, 10, 1441805, 1376256, 10, 1572877, 1376256, 10, 1703949, 1376256, 10, 1835021, 1376256, 10, 1835020, 1376256, 10, 1966092, 1376256, 10, 1966093, 1376256, 10, 2097164, 1376256, 10, 2097165, 1376256, 10, 2097162, 1376256, 10, 2162701, 1376256, 10, 2162699, 1376256, 10, 2162698, 1376256, 10, 2097160, 1376256, 10, 2097158, 1376256, 10, 2097156, 1376256, 10, 2162692, 1376256, 10, 2162694, 1376256, 10, 2162696, 1376256, 10, 1179673, 1376256, 10, 1179675, 1376256, 10, 1179677, 1376256, 10, 1310749, 1376256, 10, 1310745, 1376256, 10, 1310747, 1376256, 10, 1441819, 1376256, 10, 1441821, 1376256, 10, 1572893, 1376256, 10, 1703965, 1376256, 10, 1835037, 1376256, 10, 1966109, 1376256, 10, 2097181, 1376256, 10, 1572891, 1376256, 10, 1703963, 1376256, 10, 1835035, 1376256, 10, 1966107, 1376256, 10, 2097179, 1376256, 10, 1703966, 1376256, 10, 1703968, 1376256, 1610612746, 1703970, 1376256, 1610612746, 1703972, 1376256, 1610612746, 1703975, 1376256, 1610612746, 1703974, 1376256, 1610612746, 1703977, 1376256, 1610612746, 1703979, 1376256, 1610612746, 1703981, 1376256, 1610612746, 1703983, 1376256, 1610612746, 1572907, 1376256, 1610612746, 1572908, 1376256, 1610612746, 1441836, 1376256, 1610612746, 1441835, 1376256, 1610612746, 1703985, 1376256, 1610612746, 1703987, 1376256, 1610612746, 1769503, 1376256, 1610612746, 1769506, 1376256, 1610612746, 1769505, 1376256, 1610612746, 1769508, 1376256, 1610612746, 1769510, 1376256, 1610612746, 1769512, 1376256, 1610612746, 1769514, 1376256, 1610612746, 1769516, 1376256, 1610612746, 1769517, 1376256, 1610612746, 1769520, 1376256, 1610612746, 1769519, 1376256, 1610612746, 1769521, 1376256, 1610612746, 1769523, 1376256, 1610612746, 1048593, 1376256, 10, 1048594, 1376256, 10, 917522, 1376256, 10, 917521, 1376256, 10, 1114111, 1376256, 8, 1048577, 1376256, 8, 1048579, 1376256, 8, 1048580, 1376256, 8, 1048582, 1376256, 8, 1048583, 1376256, 8, 1048584, 1376256, 8, 1048585, 1376256, 8, 1048599, 1376256, 8, 1048600, 1376256, 8, 1048601, 1376256, 8, 1048603, 1376256, 8, 1048605, 1376256, 8, 1572897, 1376256, 8, 1572899, 1376256, 8, 1572901, 1376256, 8, 1572903, 1376256, 8, 1572912, 1376256, 8, 1572914, 1376256, 8, 1966084, 1376256, 8, 1966086, 1376256, 8, 1966088, 1376256, 8, 1703989, 1376256, 10, 1703991, 1376256, 10, 1769525, 1376256, 10, 1769527, 1376256, 10, 1769530, 1376256, 10, 1769529, 1376256, 10, 1703993, 1376256, 10, 1703994, 1376256, 10, 1703996, 1376256, 10, 1769532, 1376256, 10, 1572924, 1376256, 10, 1441852, 1376256, 10, 1310780, 1376256, 10, 1179708, 1376256, 10, 1048636, 1376256, 10, 917564, 1376256, 10, 786492, 1376256, 10, 655420, 1376256, 10, 524348, 1376256, 10, 393276, 1376256, 10, 262204, 1376256, 10, 1245246, 1376256, 10, 1245248, 1376256, 10, 1245250, 1376256, 10, 1245252, 1376256, 10, 1245254, 1376256, 10, 1310782, 1376256, 10, 1310784, 1376256, 10, 1310786, 1376256, 10, 1310788, 1376256, 10, 1310790, 1376256, 10, 1572923, 1376256, 10, 1441851, 1376256, 10, 1310779, 1376256, 10, 1179707, 1376256, 10, 1048635, 1376256, 10, 917563, 1376256, 10, 786491, 1376256, 10, 655419, 1376256, 10, 524347, 1376256, 10, 393275, 1376256, 10, 262203, 1376256, 10, 1900597, 1376256, 10, 2031669, 1376256, 10, 2228277, 1376256, 10, 2097205, 1376256, 10, 2293813, 1376256, 10, 2424885, 1376256, 10, 2424887, 1376256, 10, 2424888, 1376256, 10, 2424889, 1376256, 10, 2424890, 1376256, 10, 2424891, 1376256, 10, 2424892, 1376256, 10, 2424893, 1376256, 10, 2424894, 1376256, 10, 2424895, 1376256, 10, 2424896, 1376256, 10, 2424897, 1376256, 10, 1900598, 1376256, 10, 2031670, 1376256, 10, 2162742, 1376256, 10, 2293814, 1376256, 10, 2359351, 1376256, 10, 2359355, 1376256, 10, 2359353, 1376256, 10, 2359357, 1376256, 10, 2359360, 1376256, 10, 2359359, 1376256, 10, 2359362, 1376256, 10, 2424898, 1376256, 10, 2424900, 1376256, 10, 2424902, 1376256, 10, 2359364, 1376256, 10, 2359366, 1376256, 10, 2228251, 1376256, 10, 2228253, 1376256, 10, 2359325, 1376256, 10, 2359323, 1376256, 10, 2555931, 1376256, 10, 2490395, 1376256, 10, 2490397, 1376256, 10, 2555933, 1376256, 10, 2097155, 1376256, 10, 2097153, 1376256, 10, 2097152, 1376256, 10, 2162688, 1376256, 10, 2162690, 1376256, 10, 1966080, 1376256, 8, 1966082, 1376256, 8, 1572916, 1376256, 8, 1572918, 1376256, 8, 1572920, 1376256, 8, 2228282, 1376256, 8, 2228284, 1376256, 8, 2228286, 1376256, 8, 2228288, 1376256, 8, 2228290, 1376256, 8, 2228292, 1376256, 8, 2228294, 1376256, 8, 1114176, 1376256, 8, 1114178, 1376256, 8, 1114180, 1376256, 8, 1114182, 1376256, 8, 131131, 1376256, 10, 131132, 1376256, 10, 60, 1376256, 10, 59, 1376256, 10, 1572921, 1835008, 11, 1572905, 1835008, 11, 1048591, 1835008, 11, 1966090, 1835008, 11, 2228280, 1703936, 11, 1572910, 1703936, 11, 1114174, 1703936, 11, 1572895, 1703936, 11, 1048596, 1703936, 11, 1835018, 1245184, 10, 1703946, 1245184, 10, 1572874, 1245184, 10, 1572889, 1245184, 10, 1703961, 1245184, 10, 1835033, 1245184, 10, 1900569, 1245184, 10, 1966105, 1245184, 10, 2031641, 1245184, 10, 2097177, 1245184, 10, 2162713, 1245184, 10, 2228249, 1245184, 10, 2293785, 1245184, 10, 2424857, 1245184, 10, 2555929, 1245184, 10, 2031667, 1245184, 10, 2097203, 1245184, 10, 2162739, 1245184, 10, 2228275, 1245184, 10, 2293811, 1245184, 10, 2359347, 1245184, 10, 2424883, 1245184, 10, 1441849, 1245184, 10, 1310777, 1245184, 10, 1179705, 1245184, 10, 1048633, 1245184, 10, 917561, 1245184, 10, 786489, 1245184, 10, 655417, 1245184, 10, 524345, 1245184, 10, 393273, 1245184, 10, 262201, 1245184, 10, 131129, 1245184, 10, 57, 1245184, 10, 62, 1507328, 10, 131134, 1507328, 10, 262206, 1507328, 10, 393278, 1507328, 10, 458814, 1507328, 10, 589886, 1507328, 10, 720958, 1507328, 10, 852030, 1507328, 10, 983102, 1507328, 10, 1572926, 1507328, 10, 1703998, 1507328, 10, 1769534, 1507328, 10, 2031672, 1507328, 10, 2097208, 1507328, 10, 1441854, 1703936, 9, 1441856, 1376256, 12, 1441858, 1376256, 12, 1441860, 1376256, 12, 1441862, 1376256, 12, 1900600, 1703936, 9, 1900595, 1835008, 9, 1900602, 1376256, 12, 1900604, 1376256, 12, 1900606, 1507328, 12, 1900575, 1703936, 9, 1900577, 1376256, 12, 1900579, 1376256, 12, 1900581, 1376256, 12, 1900583, 1376256, 12, 1900585, 1376256, 12, 1900587, 1376256, 12, 1900589, 1376256, 12, 1900591, 1376256, 12, 1900593, 1376256, 12, 1441817, 1835008, 9, 1441802, 1835008, 9, 1441807, 1703936, 9, 2293775, 1507328, 12, 1572879, 1507328, 10, 1703951, 1507328, 10, 1835023, 1507328, 10, 1966095, 1507328, 10, 2097167, 1507328, 10, 2162703, 1507328, 10, 2031647, 1507328, 10, 2162719, 1507328, 10, 2228255, 1507328, 10, 2359327, 1507328, 10, 2490399, 1507328, 10, 2555935, 1507328, 10, 1441838, 1507328, 10, 1441833, 1245184, 10, 1179679, 1507328, 10, 1310751, 1507328, 10, 1441823, 1507328, 10, 1048607, 1507328, 8, 1441809, 1376256, 12, 1441811, 1376256, 12, 1441812, 1376256, 12, 1441814, 1376256, 12, 1441815, 1376256, 12, 1507327, 1376256, 12, 1441792, 1376256, 12, 1441793, 1376256, 12, 1441794, 1376256, 12, 1441795, 1376256, 12, 1441796, 1376256, 12, 1441797, 1376256, 12, 1441798, 1376256, 12, 1441799, 1376256, 12, 1441800, 1376256, 12, 917524, 1507328, 10, 917519, 1245184, 10, 2293773, 1376256, 12, 2293771, 1376256, 12, 2293760, 1376256, 12, 2293761, 1376256, 12, 2293762, 1376256, 12, 2293763, 1376256, 12, 2293764, 1376256, 12, 2293765, 1376256, 12, 2293766, 1376256, 12, 2293767, 1376256, 12, 2293768, 1376256, 12, 2293769, 1376256, 12, 2555957, 1376256, 12, 2555959, 1376256, 12, 2555961, 1376256, 12, 2555963, 1376256, 12, 2555965, 1376256, 12, 2555967, 1376256, 12, 2555969, 1376256, 12, 2555971, 1376256, 12, 2555974, 1376256, 12, 2555973, 1376256, 12, 2555955, 1245184, 12, 2031614, 1376256, 8, 2031612, 1376256, 8, 2359294, 1376256, 12, 2359292, 1376256, 12, 2162686, 1376256, 10, 2162684, 1376256, 10, 2228220, 1376256, 10, 2228222, 1376256, 10, 1245181, 1376256, 10, 1245180, 1376256, 10, 1376252, 1376256, 10, 1376253, 1376256, 10, 1114108, 1376256, 8, 1114110, 1376256, 8, 1507325, 1376256, 12, 1507324, 1376256, 12, 2687003, 1376256, 10, 2687005, 1376256, 10, 2687007, 1507328, 10, 2687001, 1245184, 10, 2359367, 1376256, 10, 2424903, 1376256, 10, 2555975, 1376256, 12, 2228295, 1376256, 8, 1048589, 1376256, 8, 1048587, 1376256, 8, 1048598, 1376256, 8, 786443, 65540, 1, 786437, 65540, 1, 851967, 65540, 1, 458751, 65540, 1, 393216, 65540, 1, 393222, 65540, 1, 786456, 65540, 1, 786462, 65540, 1, 1310755, 65540, 1, 786468, 65540, 1, 786474, 65540, 1, 786480, 65540, 1, 393228, 65540, 1, 393234, 65540, 1, 393240, 65540, 1, 393246, 65540, 1, 393252, 65540, 1, 393253, 65540, 1, 393259, 65540, 1, 393265, 65540, 1, 1179689, 65540, 1, 1179690, 65540, 1, 1179696, 65540, 1, 1441840, 786432, 16, 1441842, 786432, 16, 1441844, 786432, 16, 1441846, 786432, 16, 1441847, 786432, 16, 1310775, 786432, 16, 1310773, 786432, 16, 1310772, 786432, 16, 655412, 786432, 16, 655414, 786432, 16, 655415, 786432, 16, 786487, 786432, 16, 917559, 786432, 16, 1048631, 786432, 16, 1179703, 786432, 16, 786485, 786432, 16, 917557, 786432, 16, 1048629, 786432, 16, 1179701, 786432, 16, 1179700, 786432, 16, 1048628, 786432, 16, 917556, 786432, 16, 786484, 786432, 16, 524341, 786432, 16, 393269, 786432, 16, 262197, 786432, 16, 131125, 786432, 16, 53, 786432, 16, 55, 786432, 16, 131127, 786432, 16, 262199, 786432, 16, 393271, 786432, 16, 524343, 786432, 16, 786452, 786432, 16, 655380, 786432, 16, 655378, 786432, 16, 655375, 786432, 16, 655376, 786432, 16, 786447, 786432, 16, 786449, 786432, 16, 786451, 786432, 16, 131121, 65540, 1, 131116, 65540, 1, 131110, 65540, 1, 131104, 65540, 1, 131098, 65540, 1, 131092, 65540, 1, 131086, 65540, 1, 131080, 65540, 1, 131074, 65540, 1, 196607, 65540, 1, 1048611, 65540, 1, 1769470, 65540, 1, 1703942, 65540, 1, 1572866, 786432, 16, 1703938, 786432, 16, 1835010, 786432, 16, 65532, 786432, 16, 196604, 786432, 16, 327676, 786432, 16, 458748, 786432, 16, 589820, 786432, 16, 720892, 786432, 16, 851964, 786432, 16, 983036, 786432, 16, 1703957, 65540, 1, 2097173, 65540, 1, 2490389, 65540, 1, 2555919, 65540, 1, 2555914, 65540, 1, 2555908, 65540, 1, 2621438, 65540, 1, 1572881, 786432, 16, 1703953, 786432, 16, 1835025, 786432, 16, 2031633, 786432, 16, 1966097, 786432, 16, 2097169, 786432, 16, 2228241, 786432, 16, 2293777, 786432, 16, 2686995, 786432, 16, 2686996, 786432, 16, 2686999, 786432, 16, 2686997, 786432, 16, 1441831, 786432, 16, 2097210, 786432, 16, 2097211, 786432, 16, 2031674, 786432, 16, 2031676, 786432, 16, 2031678, 786432, 16, 2097214, 786432, 16, 2097213, 786432, 16, 1704002, 65540, 1, 2031682, 65540, 1, 2031685, 65540, 1, 1638469, 65540, 1, 131138, 65540, 1, 524354, 65540, 1, 852034, 65540, 1, 983110, 786432, 16, 852038, 786432, 16, 720966, 786432, 16, 589894, 786432, 16, 458822, 786432, 16, 327750, 786432, 16, 196678, 786432, 16, 65606, 786432, 16, 70, 786432, 16, 71, 786432, 16, 131143, 786432, 16, 327751, 786432, 16, 262215, 786432, 16, 393287, 786432, 16, 524359, 786432, 16, 655431, 786432, 16, 786503, 786432, 16, 917575, 786432, 16, 1048647, 786432, 16, 2687027, 786432, 16, 2687029, 786432, 16, 2687031, 786432, 16, 2687033, 786432, 16, 2687035, 786432, 16, 2687037, 786432, 16, 2687039, 786432, 16, 2687041, 786432, 1610612752, 2687042, 786432, 1610612752, 2687044, 786432, 1610612752, 2687045, 786432, 1610612752, 2687047, 786432, 1610612752, 2162723, 65540, 1, 2162729, 65540, 1, 2162735, 65540, 1, 2555952, 65540, 1, 2555946, 65540, 1, 2555939, 65540, 1, 2424871, 786432, 16, 2555943, 786432, 16, 2687015, 786432, 16, 1114183, 1376256, 8, 1441863, 1376256, 12, 1245255, 1376256, 10, 1310791, 1376256, 10)
layer_1/name = "house"
layer_1/z_index = 1
layer_1/tile_data = PackedInt32Array(917549, 65538, 3, 983050, 3, 0, 1507325, 3, 0, 2293772, 3, 0, 1900577, 3, 0, 1507383, 3, 0, 262207, 3, 0, 2162757, 3, 0, 1507347, 131075, 0, 983070, 131075, 0, 1507368, 131075, 0, 1966137, 131075, 0, 2424882, 131075, 0, 2621464, 131075, 0)

[node name="TileMap2(Home)" type="TileMap" parent="."]
scale = Vector2(0.69, 0.69)
tile_set = SubResource("TileSet_gpl68")
format = 2
layer_0/name = "home"
layer_0/z_index = 1
layer_0/tile_data = PackedInt32Array(786460, 393216, 5)

[node name="StaticBody2D" type="StaticBody2D" parent="."]
z_index = 1
position = Vector2(220, 123)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
z_index = 1
position = Vector2(-2, 2)
polygon = PackedVector2Array(-9, 22, -2, 22, -3, 37, -2, 82, -3, 100, 46, 99, 45, 90, 78, 87, 81, 100, 150, 103, 189, 99, 188, -1, 209, 6, 211, -50, 162, -84, 29, -84, -18, -56, -19, 2, -9, -1)

[node name="Shadow" type="Sprite2D" parent="."]
position = Vector2(309, 208)
scale = Vector2(1.0375, 1.0625)
texture = ExtResource("6_2ukpi")

[node name="Shadow2" type="Sprite2D" parent="."]
position = Vector2(722, 313)
scale = Vector2(1.02917, 1.675)
texture = ExtResource("6_2ukpi")

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
z_index = 1
position = Vector2(641, 168)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D2"]
z_index = 1
polygon = PackedVector2Array(-4, -1, 4, 33, 1, 57, -13, 57, -13, 157, 38, 156, 38, 164, 32, 163, 34, 175, -19, 175, -17, 53, 1, 52, -2, 24, -9, 29, -19, 19, -9, 10, -20, -10, 11, -19, 40, -49, 132, -50, 163, -19, 199, -14, 176, -2, 188, 21, 183, 25, 177, 25, 174.976, 33.3485, 169, 58, 175, 57, 178, 175, 85, 174, 84, 156, 173, 158, 173, 61, 168, 61, 169, 20, 169, 21, 168.856, 27.8217, 167, 116, 75, 116, 76, 104, 36, 103, 37, 116, 2, 116, 4, 57, 5, 9)

[node name="GoBackToHome" type="Area2D" parent="."]
position = Vector2(71, 91)

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoBackToHome"]
position = Vector2(211, 124)
shape = SubResource("RectangleShape2D_nh2w5")

[node name="player" parent="." instance=ExtResource("5_q6snc")]
position = Vector2(534, 207)
scale = Vector2(0.497, 0.497)

[node name="GoIntoShop" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoIntoShop"]
position = Vector2(697, 278)
shape = SubResource("RectangleShape2D_n3faq")

[node name="correct_road" type="Area2D" parent="."]
position = Vector2(1173, 590)

[node name="CollisionShape2D" type="CollisionShape2D" parent="correct_road"]
position = Vector2(-25, -1)
shape = SubResource("RectangleShape2D_fvfyo")

[node name="Window" type="Window" parent="."]
title = "Alert!"
initial_position = 2
size = Vector2i(400, 200)
visible = false

[node name="Label" type="Label" parent="Window"]
offset_right = 40.0
offset_bottom = 23.0
text = "You see a wooden sign 
that says the road is 
incorrect!"
label_settings = SubResource("LabelSettings_56oo3")
horizontal_alignment = 1
vertical_alignment = 1

[node name="wrong_road1" type="Area2D" parent="."]
position = Vector2(454, 688)

[node name="CollisionShape2D" type="CollisionShape2D" parent="wrong_road1"]
position = Vector2(0, -23)
shape = SubResource("RectangleShape2D_ujh5n")

[node name="wrong_road2" type="Area2D" parent="."]
position = Vector2(-62, 310)

[node name="CollisionShape2D" type="CollisionShape2D" parent="wrong_road2"]
position = Vector2(6, 0)
shape = SubResource("RectangleShape2D_u28t8")

[node name="wrong_road3" type="Area2D" parent="."]
position = Vector2(-66, 528)

[node name="CollisionShape2D" type="CollisionShape2D" parent="wrong_road3"]
position = Vector2(4, -2)
shape = SubResource("RectangleShape2D_7i7nb")

[node name="wrong_road4" type="Area2D" parent="."]
position = Vector2(1146, 318)

[node name="CollisionShape2D" type="CollisionShape2D" parent="wrong_road4"]
position = Vector2(1, 2)
shape = SubResource("RectangleShape2D_t7gk6")

[node name="wrong_road5" type="Area2D" parent="."]
position = Vector2(960, 7)

[node name="CollisionShape2D" type="CollisionShape2D" parent="wrong_road5"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_u86sa")

[node name="enemy_spawner_grass" parent="." instance=ExtResource("10_848d4")]
position = Vector2(67, 375)

[node name="enemy_spawner_grass2" parent="." instance=ExtResource("10_848d4")]
position = Vector2(394, 384)

[node name="enemy_spawner_grass3" parent="." instance=ExtResource("10_848d4")]
position = Vector2(569, 82)

[node name="enemy_spawner_grass4" parent="." instance=ExtResource("10_848d4")]
position = Vector2(963, 486)

[node name="TileMap3(Y-Sort)" type="TileMap" parent="."]
z_index = 1
y_sort_enabled = true
tile_set = SubResource("TileSet_whxcf")
format = 2
layer_0/y_sort_enabled = true
layer_0/tile_data = PackedInt32Array(917505, 65537, 1, 2097168, 65537, 1, 2031653, 65537, 1, 852024, 65537, 1, 2555960, 65537, 1, 1048599, 1, 8, 1572900, 1, 8, 2031666, 1, 8, 983103, 1, 8, 1900552, 1, 8, 2359320, 1, 8)

[node name="Window2" type="Window" parent="."]
title = "Alert!"
initial_position = 2
size = Vector2i(300, 200)
visible = false

[node name="Label" type="Label" parent="Window2"]
offset_right = 40.0
offset_bottom = 23.0
text = "     Come here to find
     road after you kill
     30 enemies!"
label_settings = SubResource("LabelSettings_td6ap")
horizontal_alignment = 1

[node name="Window3" type="Window" parent="."]
title = "Alert!"
initial_position = 2
size = Vector2i(500, 250)
visible = false

[node name="Label" type="Label" parent="Window3"]
offset_right = 40.0
offset_bottom = 23.0
text = "  You've killed 30 enemies!
  Good job!
  You can kill more for more coins or you
  can find road to next scene
  (You're able to come back if you go to
 second scene)"
label_settings = SubResource("LabelSettings_td6ap")

[node name="border" type="StaticBody2D" parent="."]
position = Vector2(-69, -1)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="border"]
polygon = PackedVector2Array(0, -7, 6, 11, 7, 113, 8, 277, -6, 281, 0, 344, 10, 351, 9, 484, 10, 505, -6, 508, -5, 548, 10, 554, 10, 664, 412, 663, 495, 661, 499, 676, 542, 680, 560, 659, 1033, 665, 1220, 665, 1221, 612, 1229, 608, 1228, 561, 1211, 547, 1220, 351, 1232, 337, 1229, 288, 1208, 274, 1210, 2, 1061, 3, 1045, -10, 1004, -8, 999, 4, 765, 5, 531, 2, 69, 4, 9, -3, 421, -25, 1237, -25, 1240, 68, 1249, 334, 1248, 548, 1246, 703, 1123, 704, 527, 704, 77, 695, -24, 685, -21, 504, -23, 364, -24, 154)

[node name="Window4" type="Window" parent="."]
title = "Alert!"
initial_position = 2
size = Vector2i(400, 200)
visible = false

[node name="Label" type="Label" parent="Window4"]
offset_right = 40.0
offset_bottom = 23.0
text = "   Welcome to GrassScene
    After killing 30 enemies
   you can try to find road to next scene
     (next scene is second scene)
       Good Luck!"
label_settings = SubResource("LabelSettings_ivxkn")
horizontal_alignment = 1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_kauch")
volume_db = 1.0

[node name="Label" type="Label" parent="."]
offset_left = 498.0
offset_top = 258.0
offset_right = 682.0
offset_bottom = 313.0
text = "have a look 
at the shop! ->"
label_settings = SubResource("LabelSettings_uvyet")

[node name="Label2" type="Label" parent="."]
offset_left = 464.0
offset_top = 418.0
offset_right = 710.0
offset_bottom = 445.0
text = "Goal: Kill Enemies reach 30"
label_settings = SubResource("LabelSettings_u5m86")

[connection signal="body_entered" from="GoBackToHome" to="." method="_on_go_back_to_home_body_entered"]
[connection signal="body_exited" from="GoBackToHome" to="." method="_on_go_back_to_home_body_exited"]
[connection signal="body_entered" from="GoIntoShop" to="." method="_on_go_into_shop_body_entered"]
[connection signal="body_exited" from="GoIntoShop" to="." method="_on_go_into_shop_body_exited"]
[connection signal="body_entered" from="correct_road" to="." method="_on_correct_road_body_entered"]
[connection signal="body_exited" from="correct_road" to="." method="_on_correct_road_body_exited"]
[connection signal="close_requested" from="Window" to="." method="_on_window_close_requested"]
[connection signal="body_entered" from="wrong_road1" to="." method="_on_wrong_road_1_body_entered"]
[connection signal="body_entered" from="wrong_road2" to="." method="_on_wrong_road_2_body_entered"]
[connection signal="body_entered" from="wrong_road3" to="." method="_on_wrong_road_3_body_entered"]
[connection signal="body_entered" from="wrong_road4" to="." method="_on_wrong_road_4_body_entered"]
[connection signal="body_entered" from="wrong_road5" to="." method="_on_wrong_road_5_body_entered"]
[connection signal="close_requested" from="Window2" to="." method="_on_window_2_close_requested"]
[connection signal="close_requested" from="Window3" to="." method="_on_window_3_close_requested"]
[connection signal="close_requested" from="Window4" to="." method="_on_window_4_close_requested"]
